--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.1",
+    "aws-sdk": "^2.1520.0",
+    "buffer": "^6.0.3",
     "countries-and-timezones": "^3.5.2",
     "font-picker-react": "^3.5.2",
     "html2canvas": "^1.4.1",
