--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "countries-and-timezones": "^3.5.2",
     "font-picker-react": "^3.5.2",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jssha": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
