--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.3.1",
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "sweetalert": "^2.1.2",
